// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackerState default initializes the checked locations 1`] = `
Object {
  "Dragon Roost Cavern": Object {
    "Bird's Nest": false,
  },
  "Outset Island": Object {
    "Savage Labyrinth - Floor 30": false,
  },
}
`;

exports[`TrackerState default initializes the items 1`] = `
Object {
  "Bait Bag": 0,
  "Ballad of Gales": 1,
  "Boat's Sail": 1,
  "Bombs": 0,
  "Boomerang": 0,
  "Cabana Deed": 0,
  "Command Melody": 0,
  "DRC Big Key": 0,
  "DRC Compass": 0,
  "DRC Dungeon Map": 0,
  "DRC Small Key": 0,
  "Deku Leaf": 0,
  "Delivery Bag": 0,
  "Din's Pearl": 0,
  "ET Big Key": 0,
  "ET Compass": 0,
  "ET Dungeon Map": 0,
  "ET Small Key": 0,
  "Earth God's Lyric": 0,
  "Empty Bottle": 0,
  "Entered Angular Isles Cave": 0,
  "Entered Bird's Peak Rock Cave": 0,
  "Entered Boating Course Cave": 0,
  "Entered Bomb Island Cave": 0,
  "Entered Cabana Labyrinth": 0,
  "Entered Cliff Plateau Isles Cave": 0,
  "Entered DRC": 0,
  "Entered Diamond Steppe Island Cave": 0,
  "Entered Dragon Roost Island Cave": 0,
  "Entered ET": 0,
  "Entered FF": 0,
  "Entered FW": 0,
  "Entered Fire Mountain Cave": 0,
  "Entered GT": 0,
  "Entered Horseshoe Island Cave": 0,
  "Entered Ice Ring Isle Cave": 0,
  "Entered Needle Rock Isle Cave": 0,
  "Entered Overlook Island Cave": 0,
  "Entered Pawprint Isle Chuchu Cave": 0,
  "Entered Pawprint Isle Wizzrobe Cave": 0,
  "Entered Rock Spire Isle Cave": 0,
  "Entered Savage Labyrinth": 0,
  "Entered Shark Island Cave": 0,
  "Entered Star Island Cave": 0,
  "Entered Stone Watcher Island Cave": 0,
  "Entered TotG": 0,
  "Entered WT": 0,
  "FF Compass": 0,
  "FF Dungeon Map": 0,
  "FW Big Key": 0,
  "FW Compass": 0,
  "FW Dungeon Map": 0,
  "FW Small Key": 0,
  "Farore's Pearl": 0,
  "Ghost Ship Chart": 0,
  "Grappling Hook": 0,
  "Hero's Charm": 0,
  "Hookshot": 0,
  "Hurricane Spin": 0,
  "Iron Boots": 0,
  "Maggie's Letter": 0,
  "Magic Armor": 0,
  "Magic Meter Upgrade": 0,
  "Moblin's Letter": 0,
  "Nayru's Pearl": 0,
  "Note to Mom": 0,
  "Power Bracelets": 0,
  "Progressive Bomb Bag": 0,
  "Progressive Bow": 0,
  "Progressive Picto Box": 0,
  "Progressive Quiver": 0,
  "Progressive Shield": 1,
  "Progressive Sword": 1,
  "Progressive Wallet": 0,
  "Skull Hammer": 0,
  "Song of Passing": 1,
  "Spoils Bag": 0,
  "Telescope": 0,
  "Tingle Statue": 0,
  "Tingle Tuner": 0,
  "TotG Big Key": 0,
  "TotG Compass": 0,
  "TotG Dungeon Map": 0,
  "TotG Small Key": 0,
  "Treasure Chart 1": 0,
  "Treasure Chart 10": 0,
  "Treasure Chart 11": 0,
  "Treasure Chart 12": 0,
  "Treasure Chart 13": 0,
  "Treasure Chart 14": 0,
  "Treasure Chart 15": 0,
  "Treasure Chart 16": 0,
  "Treasure Chart 17": 0,
  "Treasure Chart 18": 0,
  "Treasure Chart 19": 0,
  "Treasure Chart 2": 0,
  "Treasure Chart 20": 0,
  "Treasure Chart 21": 0,
  "Treasure Chart 22": 0,
  "Treasure Chart 23": 0,
  "Treasure Chart 24": 0,
  "Treasure Chart 25": 0,
  "Treasure Chart 26": 0,
  "Treasure Chart 27": 0,
  "Treasure Chart 28": 0,
  "Treasure Chart 29": 0,
  "Treasure Chart 3": 0,
  "Treasure Chart 30": 0,
  "Treasure Chart 31": 0,
  "Treasure Chart 32": 0,
  "Treasure Chart 33": 0,
  "Treasure Chart 34": 0,
  "Treasure Chart 35": 0,
  "Treasure Chart 36": 0,
  "Treasure Chart 37": 0,
  "Treasure Chart 38": 0,
  "Treasure Chart 39": 0,
  "Treasure Chart 4": 0,
  "Treasure Chart 40": 0,
  "Treasure Chart 41": 0,
  "Treasure Chart 5": 0,
  "Treasure Chart 6": 0,
  "Treasure Chart 7": 0,
  "Treasure Chart 8": 0,
  "Treasure Chart 9": 0,
  "Triforce Chart 1": 0,
  "Triforce Chart 2": 0,
  "Triforce Chart 3": 0,
  "Triforce Chart 4": 0,
  "Triforce Chart 5": 0,
  "Triforce Chart 6": 0,
  "Triforce Chart 7": 0,
  "Triforce Chart 8": 0,
  "Triforce Shard": 0,
  "WT Big Key": 0,
  "WT Compass": 0,
  "WT Dungeon Map": 0,
  "WT Small Key": 0,
  "Wind God's Aria": 0,
  "Wind Waker": 1,
  "Wind's Requiem": 1,
}
`;

exports[`TrackerState default initializes the items for locations 1`] = `
Object {
  "Dragon Roost Cavern": Object {
    "Bird's Nest": null,
  },
  "Outset Island": Object {
    "Savage Labyrinth - Floor 30": null,
  },
}
`;
